--- a/src/style.css
+++ b/src/style.css
@@ -12,15 +12,19 @@
     bottom:0;
     left: 0;
     right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-size: cover;
     font-family: 'Montserrat', sans-serif;
     color: var(--textColor);
+    font-size: 19px;
+    overflow-y: auto;
+    overflow-x: hidden;
     text-align: center;
 }
 
 #navPanel {
-    position: relative;
-    z-index: 2;
     background-color: rgba(0,0,0,0.9);
     border-bottom: 1px solid var(--borderColor);
     text-align: center;
@@ -40,13 +44,20 @@
 }
 
 .bttns {
-    font-size: 19px;
+    font-size: inherit;
     background: none;
     border: none;
     cursor: pointer;
     font-family: inherit;
     color: inherit;
     padding: 20px;
+    position: relative;
+    transition: .2s ease;
+    bottom: 0;
+}
+
+.bttns:hover {
+    bottom: 7px;
 }
 
 .selected {
@@ -54,27 +65,53 @@
 }
 
 #navContent {
+    box-sizing: border-box;
     width: 700px;
-    height: 100px;
     background-color: var(--backgroundLight);
-    position: relative;
+    align-self: center;
     display: inline-block;
-    z-index: 1;
     margin-top: 55px;
     margin-bottom: 55px;
     border: 1px solid var(--borderColor);
     border-radius: 5px;
+    padding: 20px;
 }
 
 #gitHubInfo {
-    position: fixed;
-    z-index: 1;
-    bottom: 0;
-    left: 0;
-    right: 0;
     height: 45px;
     box-sizing: border-box;
     padding: 12px;
     background-color: var(--backgroundLight);
     border-top: 1px solid var(--borderColor);
+    font-size: 16px;
+}
+
+a:hover {
+    opacity: 0.5;
+}
+
+.message {
+    margin: 25px;
+}
+
+#personPic {
+    border-radius: 50%;
+}
+
+@media only screen and (max-width: 520px) {
+    #navContent {
+        transform: scale(0.8);
+    }
+
+    #businessName {
+        font-size: 85px;
+    }
+
+    #navPanel {
+        font-size: 17px;
+    }
+
+    #gitHubInfo {
+        font-size: 13px;
+    }
 }
