--- a/src/style.css
+++ b/src/style.css
@@ -76,10 +76,6 @@
     border: 1px solid var(--borderColor);
     border-radius: 5px;
     padding: 20px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    
 }
 
 #gitHubInfo {
@@ -96,7 +92,7 @@ a:hover {
 }
 
 .message {
-    margin: 25px;
+    margin: 20px;
 }
 
 #personPic {
@@ -135,6 +131,13 @@ a:hover {
     margin: 0;
 }
 
+#firstMessage {
+    box-sizing: border-box;
+    width: 350px;
+    display: inline-block;
+    line-height: 2.5;
+}
+
 @media only screen and (max-width: 600px) {
     #navContent {
         flex-direction: column;
@@ -152,9 +155,6 @@ a:hover {
     .foodContainer {
         width: 90vw;
         margin: 0;
-    }
-
-    .foodContainer {
         transform: scale(0.8);
     }
 
@@ -168,5 +168,14 @@ a:hover {
 
     #gitHubInfo {
         font-size: 13px;
+    }
+
+    .message {
+       font-size: 17px;
+       margin: 0;
+    }
+
+    #personPic {
+        transform: scale(0.8);
     }
 }
